--- a/Thesis-proposal.tex
+++ b/Thesis-proposal.tex
@@ -41,7 +41,7 @@
 	front-list-of-tables = false,
 %	monochrome = true,
 %	layout-short = true,
-%	savetoner = true,
+	savetoner = false,
 }
 
 \ctuprocess
@@ -94,30 +94,30 @@
 
 \chapter{Motivation}
 
-Radio position determination of flying objects is standard radiolocation discipline which historically led to the development of radar systems. At present, the radar systems are mature enough to detect almost any type of radio-reflective artificial flying object in the atmosphere or near space. \cite{Radar_basics} Therefore the technology development is moving from the focus on radar sensitivity to system stability, reliability, and low operation costs leaving no much space for scientific research. However, resulting applied technologies leads to new scientific possibilities of observations and measurement techniques which could bring new discoveries \cite{LOFAR}. Unfortunately,  due to a need of extraordinary parameters for scientific measurement, an experiment-specific radar system is usually required. 
+Radio position determination of flying objects is a standard radiolocation discipline which historically led to the development of radar systems. At present, the radar systems are mature enough to detect almost any type of radio-reflective artificial flying object in the atmosphere or near space. \cite{Radar_basics} Therefore the technology development is moving from the focus on radar sensitivity to system stability, reliability, and low operation costs leaving little space for scientific research. However, resulting applied technologies lead to new scientific possibilities of observations and measurement techniques which could bring new discoveries \cite{LOFAR}. Unfortunately, due to a need for specific parameters for scientific measurement, an experiment-specific radar system is usually required. 
 
 \section{Flying object parameters}
 
-From radar point of view where terminology usually uses a term target instead of an object. The radar cross section (RCS) which describing the ability to reflect radio waves, object distance and velocity are typical limiting parameters of the radar systems. These parameters vary largely depending on the measured flying target type. 
+From a radar point of view the terminology usually uses a term target instead of an object. The radar cross section (RCS; describing the ability to reflect radio waves), object distance and velocity are typical limiting parameters of the radar systems. These parameters vary largely depending on the measured flying target type. 
 
 \subsection{Artificial airspace targets}
 
-A large group of possible radio reflective targets is classical airspace objects like airplanes, unmanned aerial vehicles or satellites. These classical objects are detectable and localizable with already existing radar systems. Parameters like RCS and trajectory or velocity of these object are usually known from other sources simultaneously and therefore are not attracting much interest of radio scientist except utilizing this object category for system parameters verification. 
+A large group of possible radio reflective targets includes classical airspace objects like airplanes, unmanned aerial vehicles or satellites. These classical objects are detectable and localizable with already existing radar systems. Parameters like RCS and trajectory or velocity of these object are usually known from other sources simultaneously and therefore are not attracting much interest of radio scientist except utilizing this object category for system parameters verification. 
 
 \subsection{Natural radio-detectable objects}
 
-Several natural atmospheric or near space phenomena are expected to be localized by radio-waves. The list contains Solar system bodies, meteors, ionospheric fluctuations, Solar flares, cosmic rays particles and atmospheric electrical discharges. Not all of these natural phenomena have confirmed radio detection due to technical limitations or yet unknown physical principles \cite{LOPES}.  But observation of natural phenomena are generally scientifically more valuable than artificial objects \cite{astro_particles}, \cite{LOFAR_showers}. Therefore the following text will be mainly focused on methods useful for natural phenomena measurement and detection. 
+Several natural atmospheric or near space phenomena are expected to be localized by radio-waves. The list contains Solar system bodies, meteors, ionospheric fluctuations, solar flares, cosmic rays' particles and atmospheric electrical discharges. Not all of these natural phenomena have confirmed radio detection due to technical limitations or yet unknown physical principles \cite{LOPES}.  But observation of natural phenomena are generally scientifically more valuable than artificial objects \cite{astro_particles}, \cite{LOFAR_showers}. Therefore the following text will be mainly focused on methods useful for natural phenomena measurement and detection. 
 
-Meteors were selected primarily as the core testing phenomenon because they have unusual special properties like high velocities and the wide range of RCS. Meteors, the atmospheric products of meteoroids traveling in space, are studied for many decades. Results of such research help us to understand the evolution of not only the planetary system but the interplanetary and possibly interstellar medium \cite{interplanetary_medium} as well. As the density of the interplanetary medium is low, great statistic and long-term continuous data set is necessary to describe its properties. There exist two radio waves observation methods which use the scattering ability of the ionized meteor trail.
+Meteors were selected primarily as the core testing phenomenon because they have unusual properties like high velocities and a wide range of RCS. Meteors, the atmospheric products of meteoroids traveling in space, are studied for many decades. Results of such research help us to understand the evolution of not only the planetary system but the interplanetary and possibly interstellar medium \cite{interplanetary_medium} as well. As the density of the interplanetary medium is low, great statistic and long-term continuous data set is necessary to describe its properties. There exist two radio waves observation methods which use the scattering ability of the ionized meteor trail.
 
 The oldest known radio method is a backscatter radar. It is an ordinary type of radar which expects meteor trails to be reflective targets. Currently, several radars of this type are in operation to study meteors i. e.  SkiYMet\cite{skiymet}, CMOR \cite{CMOR_radar}.
 
-However, all of above mentioned monostatic or bistatic backscatter radars have little detection coverage, usually limited to the radar antenna field of view. Therefore this radar types observe only several spatially limited areas of the Earth's atmosphere. However, the benefits of using this method are obvious - radio meteor detection capability is not dependent on the current weather and can work even during the daylight or nights with full Moon \cite{daylight_shover}.
+However, all of above mentioned monostatic or bistatic backscatter radars have little detection coverage, usually limited to the radar antenna field of view. Therefore these radar types observe only several spatially limited areas of the Earth's atmosphere. However, the benefits of using this method are obvious - radio meteor detection capability is not dependent on the current weather and can work even during the daylight or nights with full Moon \cite{daylight_shover}.
 
 Besides the above-mentioned scientific radar systems a multistatic radio meteor detection networks have evolved \cite{BRAMS}.
-These forward scattering multistatic systems have a great advantage of a significant detection coverage. Unfortunately, the current spread of this technology is not sufficient to entirely cover the meteor flux of the Earth's atmosphere.
+These forward scattering multistatic systems have a great advantage of a significant detection coverage. Unfortunately, the current spread of this technology is not sufficient to entirely cover the meteor flux in the Earth's atmosphere.
 
-The general principle of meteor observing by the forward scattering of radio waves off their trails illustrating the figure \ref{fig:forward_scattering}. A radio receiver with operating frequency range of 30-200MHz located at the proper distance (about 500-2000 km) from a transmitter. A curvature of the Earth or terrain features over this distance ensures there is no possibility of direct radio wave contact. When a meteoroid enters the atmosphere, its meteor trail may reflect the radio waves emitted by the transmitter to the receiver. The signal can be received until the ionized meteor trail recombines. Reflections can last from tenths of a second to a few minutes, depending on used radio frequency and ionization intensity. The received signal characteristics are directly related to physical parameters of the meteoric event \cite{forward_scatter}.
+The general principle of meteor observing by the forward scattering of radio waves off their trails is illustrated by the figure \ref{fig:forward_scattering}. A radio receiver with operating frequency range of 30-200MHz located at a proper distance (about 500-2000 km) from a transmitter. A curvature of the Earth or terrain features over this distance ensures there is no possibility of direct radio wave contact. When a meteoroid enters the atmosphere, its meteor trail may reflect the radio waves emitted by the transmitter to the receiver. The signal can be received until the ionized meteor trail recombines. Reflections can last from tenths of a second to a few minutes, depending on used radio frequency and ionization intensity. The received signal characteristics are directly related to physical parameters of the meteoric event \cite{forward_scatter}.
 
 \begin{figure}
  \begin{center}
@@ -129,18 +129,18 @@ The general principle of meteor observing by the forward scattering of radio wav
 
 \subsection{Position determination methods}
 
-If we want to estimate target position by radio signal reflected or transmitted by the target, we have only a small number of signal features which we could use to obtain information about target coordinates. The best method used for determination of target position depends on target type,  the precision of measurement required and intended application. In most cases for an unknown flying object, we need to implement and combine several of following general methods. 
+If we want to estimate target position by radio signal reflected or transmitted by the target, we have only a small number of signal features which we could use to obtain the information about target coordinates. The best method to be used for determination of target position depends on the target type, the precision of measurement required and intended application. In most cases for an unknown flying object, we need to implement and combine several of the following general methods. 
 
 \subsection{Direction finding}
 
-Radio direction finding is the oldest radio localization method.  It uses receiver system sensitive to the angular orientation of the incoming signal.  The target is then localized by combining angular information from multiple receivers.  The direction sensitivity of a system was historically achieved by using a directional antenna, nowadays the system usually uses antenna arrays consisting antenna elements with a semi-omnidirectional radiating pattern, but angular information combining process is still based on triangulation. 
+Radio direction finding is the oldest radio localization method.  It uses receiver system sensitive to the angular orientation of the incoming signal.  The target is then localized by combining angular information from multiple receivers.  The direction sensitivity of a system was historically achieved by using a directional antenna. Nowadays the system usually uses antenna arrays consisting of antenna elements with a semi-omnidirectional radiating pattern, but angular information combining process is still based on a triangulation. 
 
 \subsection{Distance measurement}
-Localizing a target by radio distance measurement usually, consist use of time-variable radio signal, rarely a signal attenuation model.  The target position is obtained by combining measured distances between target and receiver using geometrical trilateration or multilateration. The general limiting factor of this method is the requirement of time-space variance of the radio signal which could not be achieved in every case. 
+Localizing a target by radio distance measurement usually uses the time-variable radio signal, rarely a signal attenuation model.  The target position is obtained by combining measured distances between the target and the receiver using geometrical trilateration or multilateration. The general limiting factor of this method is the requirement of a time-space variance of the radio signal which could not be achieved in every case. 
 
 \subsection{Velocity measurement}
 
-The key principle is bistatic Doppler shift described by equation \ref{bistatic_doppler}. The method is based on the fact that multiple receivers receiving the same signal reflected or generated by the same target have seen different Doppler shifted signal depending on velocity vector of the target.  
+The key principle is a bistatic Doppler shift described by equation \ref{bistatic_doppler}. The method is based on the fact that multiple receivers receiving the same signal reflected or generated by the same target have seen different Doppler shifted signal depending on the velocity vector of the target.  
 
 \begin{equation}
 f = \frac{1}{\lambda} \frac{d}{dt} \left( R_{tx} + R_{rx} \right)
@@ -151,15 +151,15 @@ Where
 \begin{itemize}
 \item $f$ - Received frequency
 \item $\lambda$ - Radar transmitter operating frequency wavelength in meters
-\item $R_{tx}$ - Distance between transmitter and target
-\item $R_{rx}$ - Distance between receiver and target.
+\item $R_{tx}$ - Distance between the transmitter and the target
+\item $R_{rx}$ - Distance between the receiver and the target.
 \end{itemize}
 
-This method can localize only moving targets, but it is especially suitable for fast airspace targets which could not stop a movement due to physical laws restrictions. 
+This method can localize only moving targets, but it is especially suitable for fast airspace targets which could not stop their movement due to physical laws restrictions. 
 
 \chapter{Meteor trajectory determination}
 
-Every radio illuminated meteor trajectory in the atmosphere create its Doppler shift reflection footprint.  This process could be described by a numerical model of Doppler shifts for points at the trajectory. For simplicity, the tested model expects constant velocity along a straight line of the meteor path which is divided into equidistant time samples. A numerical difference of path distances between transmitter, meteor, and receiver are computed, then velocity and Doppler shift value are obtained for every point of the trajectory. 
+Every radio illuminated meteor trajectory in the atmosphere creates its Doppler shift reflection footprint.  This process could be described by a numerical model of Doppler shifts for points on the trajectory. For simplicity, the tested model expects constant velocity along a straight line of the meteor path which is divided into equidistant time samples. A numerical difference of path distances between transmitter, meteor, and receiver are computed, then velocity and Doppler shift value are obtained for every point of the trajectory. 
 The resulting figure of Doppler shifts calculated along the model meteor path radio-detectable on every existing station is shown in figure \ref{fig:dopplers}. 
 
 \begin{figure*}
@@ -171,13 +171,13 @@ The resulting figure of Doppler shifts calculated along the model meteor path ra
 \end{figure*}
 
 
-This signal model can be partially confirmed from Bolidozor meteor database where several meteor events However, on multiple stations. If we plot such meteor event in time aligned spectrogram, we obtain an image similar to the figure \ref{fig:meteor_reflections}.
+This signal model can be partially confirmed from Bolidozor meteor database where several meteor events are recorded on multiple stations. If we plot such meteor event in time aligned spectrogram, we obtain an image similar to the figure \ref{fig:meteor_reflections}.
 Precise meteor trajectory estimation methods are investigated at the moment.  One of the difficulties is a possible suboptimal geometry configuration and low inter-station events correlation.
 
 \section{GRAVES based detection system}
 
 Bolidozor uses multistatic forward scattering approach which allows an efficient use of the radar transmitter energy to maximize the information value collected from the meteor reflection.
-The network currently uses GRAVES \cite{GRAVES_radar} transmitter located in France, which transmits a continuous wave (CW) signal at a frequency of 143.05 MHz. A radiation of the transmitter is directed mainly to the south hemisphere, but due to the imperfections of its antenna system, the signal from meteor reflections can be observed in almost all European countries. Therefore the transmitter is suitable for receivers' network operations with the aim of meteor trail detection and the development of algorithms for the calculation of meteor trajectory. Unfortunately, use of a distance measurement method is not possible because the transmitter signal is only partially modulated in space by steering the transmit azimuth in several discrete sectors, but exact method and timing of steering radar beam is out of our control. 
+The network currently uses GRAVES \cite{GRAVES_radar} transmitter located in France, which transmits a continuous wave (CW) signal at a frequency of 143.05 MHz. A radiation of the transmitter is directed mainly to the south hemisphere, but due to the imperfections of its antenna system, the signal from meteor reflections can be observed in almost all European countries. Therefore the transmitter is suitable for receivers' network operations with the aim of meteor trail detection and the development of algorithms for the calculation of meteor trajectory. Unfortunately, the use of a distance measurement method is not possible because the transmitter signal is only partially modulated in space by steering the transmit azimuth in several discrete sectors, but the exact method and timing of steering radar beam is something we can not control. 
 
 \begin{figure}
  \begin{center}
@@ -188,19 +188,19 @@ The network currently uses GRAVES \cite{GRAVES_radar} transmitter located in Fra
 \end{figure}
                    
 The use of such high-frequency beacon has one main advantage over the previous meteor detection experiments.
-Previous attempts used longer radio wavelengths in frequency range 20-50 MHz. Such long wavelengths were used to obtain a higher sensitivity to finer meteor trails. According to a simplified formula (\ref{equ:decay}), where $T$ is the exponential time constant and $D$ is ambipolar diffusion coefficient and $\lambda$ is wavelength \cite{Decay_time}. We conclude that we have longer meteor from meteors echoes in comparison with the meteor of the same ionization energy observed at longer wavelengths compared to meteor reflections observed by shorter wavelengths. However, shorter wavelengths allow us to detect finer details of meteor trails.
+Previous attempts used longer radio wavelengths in frequency range 20-50 MHz. Such long wavelengths were used to obtain a higher sensitivity to finer meteor trails. According to a simplified formula (\ref{equ:decay}), where $T$ is the exponential time constant and $D$ is ambipolar diffusion coefficient and $\lambda$ is wavelength \cite{Decay_time}. The equation implies that at longer wavelengths we observe the meteor's echo for longer period of time compared to shorter wavelengths. However, shorter wavelengths allow us to detect finer details of meteor trails.
 
 \begin{equation}
 T = \frac{\lambda^2}{16 \pi ^2 D}
 \label{equ:decay}
 \end{equation}
 
-The head echo of a meteor is usually called as overdense due to its relatively high plasma frequency compared to used observation frequency ($F_{obs}$) in the front of the meteoroid shock wave that is created in the air. This condition is expressed by the equation (\ref{equ:plasma_frequency}). However, if we use a frequency near to the plasma frequency ($f_{pe}$) of the meteor trail, we can distinguish the head echo and meteor trail reflection because the Doppler shift is applied on the part of reflected signal. This situation is shown in the figure \ref{fig:meteor_reflections} where head echoes are marked by sloped dotted lines. Static meteor trail reflections are indicated by straight vertical lines.
+The head echo of a meteor is usually called overdense due to its relatively high plasma frequency compared to used observation frequency ($F_{obs}$) in the front of the meteoroid shock wave that is created in the air. This condition is expressed by the equation (\ref{equ:plasma_frequency}). However, if we use a frequency close to the plasma frequency ($f_{pe}$) of the meteor trail, we can distinguish the head echo and the meteor trail reflection because the Doppler shift is applied on the part of the reflected signal. This situation is shown in the figure \ref{fig:meteor_reflections} where head echoes are marked by sloped dotted lines. Static meteor trail reflections are indicated by straight vertical lines.
 
 \begin{figure*}
  \begin{center}
  \includegraphics[width=\textwidth]{./img/Raws_analyser.png}
- \caption{Example of meteor reflections for multiple stations - Spectrograms show the time aligned signal evolution over vertical axis. (The oldest data being at the bottom) Horizontal axis corresponds to frequency. (Highest frequency on right)}
+ \caption{Example of meteor reflections for multiple stations - Spectrograms show the time aligned signal evolution over vertical axis. (The oldest data being at the bottom) Horizontal axis corresponds to the frequency. (Highest frequency on right)}
   \label{fig:meteor_reflections} 
  \end{center}
 \end{figure*}
@@ -217,18 +217,18 @@ F_{obs} << f_{pe} =\frac{\sqrt{\frac{n_e e^2}{m \epsilon_0}}}{2 \pi}
 \end{itemize}
 
 Obviously, not all parts of the meteor trail are observable from one station as the signal can be scattered to different directions non-specularly.
-However, if we use multiple receiving stations, we greatly increase the sensitivity, because several stations could be located in the reflection spots. Therefore it is very useful to have stations a  cooperative detection network.
-The network of stations has many advantages over a single transmitter - single receiver configuration. For example, it brings robustness which allows operability even in a case that a part of the system is under a maintenance and therefore not functional.
+However, if we use multiple receiving stations, we greatly increase the sensitivity, because several stations could be located in the reflection spots. Therefore it is very useful to have stations working as a cooperative detection network.
+The network of stations has many advantages over a single transmitter - single receiver configuration. For example, it brings about robustness which allows operability even in a case that a part of the system is under a maintenance and therefore not functional.
                    
 There also exist signal processing advantages, especially if we want to compute meteor parameters such as its velocity and trajectory from the meteor radio observation. All physical parameters we could determine from the single reflection are signal intensity and frequency shift in a given time which corresponds to an ionization intensity and bi-static velocity.
-Therefore we must combine information about one meteor event from multiple stations to obtain points in space corresponding to the meteor trajectory. We should align the events according to time stamps. Therefore, a precise time synchronization between stations is required. The exact required precision depends on the network geometry. However, if we want to work in 300 m distance resolution, which is typical for the current optical methods, we need the time precision on approximately the microseconds scale. Therefore, we needed to develop a high-performance receiver with unusual parameters, in particular with a high quality of time synchronization. Tight time synchronization requirements between nodes increase the complexity of the receiver system. To simplify the development process we used MLAB open source electronic prototyping platform.
+Therefore we must combine information about one meteor event from multiple stations to obtain points in space corresponding to the meteor trajectory. We align the events according to time stamps. Therefore, a precise time synchronization between the stations is required. The exact required precision depends on the network geometry. However, if we want to work in 300 m distance resolution, which is typical for the current optical methods, we need the time precision on approximately the microseconds scale. Therefore, we needed to develop a high-performance receiver with specific parameters, in particular with a high quality of time synchronization. Tight time synchronization requirements between nodes increase the complexity of the receiver system. To simplify the development process we used MLAB open source electronic prototyping platform.
 
 As a result, a new type of radio meteor detection system is being built, based on a new idea of distributed scientific measurement systems. At the moment Bolidozor network produces a large volume of valuable radioastronomical data ready for further processing.  
-We currently have an extensive database of multi-station meteor reflections. Unfortunately, we have yet not reached suitable network geometry to reliably obtain meteor position and trajectory by the known methods \cite{Doppler_method}. 
-To overcome missing algorithm issue, the further evolution of Bolidozor network should be focused on the research of the new trajectory estimation algorithms. We are also working on the network extension with the aim of extension of the service area as well as increasing the station's density which should decrease data noise and improve the numerical stability of algorithms. 
+We currently have an extensive database of multi-station meteor reflections. Unfortunately, we have yet not reached a suitable network geometry to reliably obtain meteor position and trajectory by the known methods \cite{Doppler_method}. 
+To overcome the missing algorithm issue, a further evolution of Bolidozor network should be focused on the research of the new trajectory estimation algorithms. We are also working on the network extension with the aim of extending its service area as well as increasing the station's density which should decrease data noise and improve the numerical stability of algorithms. 
 
 \section{VOR Transmitters as signal sources}
-Although GRAVES military radar is high power transmitter which easily allows basic detection of meteors, it is not the optimal system for meteor localization because the transmitter is only one, measurement method cannot be spread to the whole earth, and the transmitted signal is not suitable modulated to allows useful distance measurement.  Therefore several others available transmitters are investigated, FM radio transmitters, VOR beacons. 
+Although GRAVES military radar is a high power transmitter which easily allows basic detection of meteors, it is not an optimal system for meteor localization because it only has one transmitter, measurement method cannot be extended to the whole earth, and the transmitted signal is not suitably modulated to allow a useful distance measurement.  Therefore several other available transmitters are investigated, such as FM radio transmitters or VOR beacons. 
 
 For feasibility study of meteor detection based on VOR beacons, a numerical signal model has been created. The spectrum of modeled signal is shown in figure \ref{VOR_signal}.
 
@@ -238,7 +238,7 @@ For feasibility study of meteor detection based on VOR beacons, a numerical sign
 \label{VOR_signal}
 \end{figure}
 
-This signal is expected to be reflected from ionized meteor trail, and signal reflection will be detected and extracted from the noise using the VOR signal replica. An intensity of received reflected signal was modeled by using standard radar equation \ref{Radar_equation}.
+This signal is expected to be reflected from an ionized meteor trail, and signal reflection will be detected and extracted from the noise using the VOR signal replica. An intensity of received reflected signal was modeled by using a standard radar equation \ref{Radar_equation}.
 
 \begin{equation}
 P_r = \frac{P_t G_t G_r \lambda^2 \sigma}{(4 \pi)^3 R_t ^2 R_r ^2 L}
@@ -257,11 +257,11 @@ Where
 \item $R_r$ — Range from the receiver to the target. 
 \end{itemize}
 
-The model generates many meteor trajectories (figure \ref{VOR_meteors} and calculates a power level at receiver for point of closest approach. The resulting power histogram is shown in figure \ref{VOR_meteors_intensity}.
+The model generates many meteor trajectories (figure \ref{VOR_meteors} and calculates the signal power at receiver for point of closest approach. The resulting power histogram is shown in figure \ref{VOR_meteors_intensity}.
 
 \begin{figure}
 \includegraphics[width=\textwidth]{./img/Modeled_meteor_trajectories.png}
-\caption{An examle of random artificial meteor trajectories}
+\caption{An example of random artificial meteor trajectories}
 \label{VOR_meteors}
 \end{figure}
 
@@ -271,11 +271,11 @@ The model generates many meteor trajectories (figure \ref{VOR_meteors} and calcu
 \label{VOR_meteors_intensity}
 \end{figure}
 
-As could be seen from resulting histogram, the power of expected received signal is on the edge of radio receiver sensitivity. Therefore detection could work only on relatively small distance, and receiver system must therefore propertly handle the strong ground signal and weak reflected signal. Such desired behavior could be probably best achieved by use of an antenna with suitable direction sensitivity.
+As could be seen from resulting histogram, the power of expected received signal is on the verge of the radio receiver sensitivity. Therefore the detection could work over only a relatively small distance, and receiver system must therefore properly handle the strong ground signal and weak reflected signal. Such desired behavior could be probably best achieved by use of an antenna with suitable direction sensitivity.
 
 \section{Hemispherical radiating pattern antenna design}
 
-A highly directional pattern antenna is usually used for radio meteor observations, but these types of antennas became impractical in cases where we have multiple transmitters such as VOR beacons spread around a reception station. In that situation, the hemispherical sensitivity of the antenna is more valuable than peak directional antenna gain. A hemispherical radiation pattern antenna should be the best solution.  The symmetry of radiation pattern of such antenna allows easy construction of antenna arrays which could be used for angular measurement of received signals.
+A highly directional pattern antenna is usually used for radio meteor observations, but these types of antennas became impractical in cases where we have multiple transmitters such as VOR beacons, spread around a reception station. In that situation, the hemispherical sensitivity of the antenna is more valuable than the peak directional antenna gain. A hemispherical radiation pattern antenna should be the best solution.  The symmetry of the radiation pattern of such antenna allows easy construction of antenna arrays which could be used for angular measurement of received signals.
 
 \subsection{Patch Antenna Design }
 
@@ -283,18 +283,18 @@ Patch antenna was initially examined due to an expectation of a simple construct
 
 \subsection{Short-circuited quadrifilar helix}
 
-Another antenna type was proposed to overcome the issues of the previous antenna design experiment.  Short-circuited quadrifilar helix (SC-QHA) is a variant of a well-known self-phased quadrifilar helix antenna (SP-QHA). However, unlike the SP-QHA type, the  SC-QHA has the narrower bandwidth which depends primarily on a bandwidth of a phasing network. Therefore the antenna could be more efficient for narrow band signals like meteor reflections.  The antenna was numerically modeled in NEC2++ software.
+Another antenna type was proposed to overcome the issues of the previous antenna design experiment.  Short-circuited quadrifilar helix (SC-QHA) is a variant of a well-known self-phased quadrifilar helix antenna (SP-QHA). However, unlike the SP-QHA type, the  SC-QHA has narrower bandwidth which depends primarily on a bandwidth of a phasing network. Therefore the antenna could be more efficient for narrow band signals like meteor reflections.  The antenna was numerically modeled in NEC2++ software.
 
 \chapter{Future work}
 
-Althought some meteor trajectory estimation algorithms are developed, the real precision of estimation is unknown because it needs a comparison with other trajectory estimation method. The best candidate will be probably optical measurement performed at the event which is certainly detected by radio method and by optical observations. 
-Algorithmic complexity of meteor trajectory estimation could be likely reduced by introducing some additional information than velocity measurements.  The direction finding with using phased antenna array is the most promising candidate for improving the measurement method it is because a distance measurement is not usable for meteors due to lack of a globally available network of transmitters which allows distance measurement.  Such localization method could be used for natural phenomena which produce a wideband time limited signal such as lightning.
+Althought some meteor trajectory estimation algorithms are developed, the real precision of estimation is unknown because it needs a comparison with other trajectory estimation method. The best candidate will be probably optical measurement performed at the event which is detected by radio method and by optical observations. 
+Algorithmic complexity of meteor trajectory estimation could be possibly reduced by introducing some additional information other than velocity measurements.  The direction finding  using phased antenna array is the most promising candidate for improving the measurement method because a distance measurement is not usable for meteors due to the lack of a globally available network of transmitters which allows distance measurement.  Such localization method could be used for natural phenomena which produce a wide-band time limited signal such as lightning.
 
 \section{Expansion of used methods to other natural phenomena}
 
-The analysis mentioned above of state of the art methods and systems conclude in the result that dissertation should focus on multi-methodical detection and analysis of natural phenomena which  is already the most promising area for radio scientific research. 
+The analysis mentioned above of state of the art methods and systems leads to a conclusion that the dissertation should focus on multi-methodical detection and analysis of natural phenomena which  is already the most promising area for radio scientific research. 
 
-Already obtained experiences can be used for detection other natural phenomena like lightning strikes which could be extremely useful for work at CRREAT project which needs precise localization of atmospheric events to achieve scientific goals. 
+An already obtained experiences can be used for detection other natural phenomena like lightning strikes which could be extremely useful for work at CRREAT project which needs precise localization of atmospheric events to achieve its scientific goals. 
 
 The CRREAT team will perform measurements of the atmospheric radiation and ionization events on satellites, aircraft, unmanned aerial vehicles, monitoring cars and ground stations. The CRREAT project will contribute to improvement of space weather models, air transport safety and global navigation systems reliability.
 
